WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31962
[Qt] Fix some compiler warnings seen on QtWebKit/Mac
https://bugs.webkit.org/show_bug.cgi?id=31962
Summary
[Qt] Fix some compiler warnings seen on QtWebKit/Mac
Laszlo Gombos
Reported
2009-11-29 14:34:24 PST
Warnings to fix: WebCore/plugins/mac/PluginPackageMac.cpp: In member function 'bool WebCore::PluginPackage::fetchInfo()': WebCore/plugins/mac/PluginPackageMac.cpp:180: warning: label 'WTF' defined but not used WebCore/plugins/mac/PluginViewMac.cpp: In member function 'void WebCore::PluginView::setNPWindowIfNeeded()': WebCore/plugins/mac/PluginViewMac.cpp:384: warning: format '%d' expects type 'int', but argument 5 has type 'int32' WebCore/plugins/mac/PluginViewMac.cpp:384: warning: format '%d' expects type 'int', but argument 6 has type 'int32' WebCore/platform/network/ResourceHandle.h:99: warning: class WebCore::ResourceHandle has virtual functions but non-virtual destructor
Attachments
proposed patch
(3.11 KB, patch)
2009-11-29 14:56 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-11-29 14:56:07 PST
Created
attachment 43992
[details]
proposed patch
WebKit Commit Bot
Comment 2
2009-11-30 08:42:34 PST
Comment on
attachment 43992
[details]
proposed patch Clearing flags on attachment: 43992 Committed
r51490
: <
http://trac.webkit.org/changeset/51490
>
WebKit Commit Bot
Comment 3
2009-11-30 08:42:38 PST
All reviewed patches have been landed. Closing bug.
Steve Block
Comment 4
2009-11-30 08:55:08 PST
***
Bug 31924
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug