2009-11-30  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix some compiler warnings seen on QtWebKit/Mac
        https://bugs.webkit.org/show_bug.cgi?id=31962

        No new tests as there is no functional change.

        * platform/network/ResourceHandle.h: Make destructor virtual as
        after r50772 ResourceHandle has virtual functions.

        * plugins/mac/PluginPackageMac.cpp:
        (WebCore::PluginPackage::fetchInfo): Fix typo WTF is a namespace
        not a label

        * plugins/mac/PluginViewMac.cpp:
        (WebCore::PluginView::setNPWindowIfNeeded): Add l to the format
        specifier

Canonical link: https://commits.webkit.org/42918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51490 268f45cc-cd09-0410-ab3c-d52691b4dbfc